Fix initial setup workflow issues. Add support for creating and editing.
* Application.cs:
* BuildService.cs:
* ProjectController.cs: Fix typo.

* UserController.cs:
* HomeController.cs:
* LogOnUserControl.ascx: Fix initial setup workflow issues.

* Cydin.csproj:
* ServiceModel.cs:
* Index.aspx:
* SiteAdminController.cs:
* EditApplication.aspx: Add support for creating and editing
  applications.

* Settings.aspx: Improve help message.

--- a/Cydin/Cydin.csproj
+++ b/Cydin/Cydin.csproj
@@ -197,6 +197,7 @@
     <Content Include="Views\SiteAdmin\Setup.aspx" />
     <Content Include="Views\Home\Edit.aspx" />
     <Content Include="Views\SiteAdmin\Log.aspx" />
+    <Content Include="Views\SiteAdmin\EditApplication.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
