Add SQLite support.

--- a/Cydin/Web.config
+++ b/Cydin/Web.config
@@ -28,6 +28,9 @@
 	
   <connectionStrings>
     <add name="CommunityAddinRepoConnectionString" connectionString="Server=localhost;Database=cydin;Uid=cydinuser;Pwd=cydinpwd;" providerName="System.Data.SqlClient" />
+	<!-- Uncomment for using SQLite
+		 <add name="CommunityAddinRepoConnectionString" connectionString="Data Source=sqlite.db;Version=3;" providerName="System.Data.SqlClient" />
+	-->
   </connectionStrings>
 	
   <system.web>
