--- a/Cydin/Cydin.csproj
+++ b/Cydin/Cydin.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="Mono.Data.Sqlite" />
     <Reference Include="System.ComponentModel.DataAnnotations">
     </Reference>
     <Reference Include="System.Core">
