Keep an history of downloads Downloads are now stored per-day. Releases are never deleted, so there will be download info for old releases.

--- a/Cydin/Cydin.csproj
+++ b/Cydin/Cydin.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\CydinController.cs" />
     <Compile Include="Models\ProjectFlag.cs" />
     <Compile Include="Controllers\ServiceEventsHandler.cs" />
+    <Compile Include="Models\RepositoryDownload.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
