Added top downloads list Moved stats logic to a new class Added button for clearing the server log

--- a/Cydin/Cydin.csproj
+++ b/Cydin/Cydin.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\ServiceEventsHandler.cs" />
     <Compile Include="Models\RepositoryDownload.cs" />
     <Compile Include="Models\DownloadStats.cs" />
+    <Compile Include="Models\StatsModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
