Add support for AppArmor boxing. Don't connect an events listeners if the LiveEnetsConnection option is not set.

--- a/CydinBuildService/CydinBuildService.csproj
+++ b/CydinBuildService/CydinBuildService.csproj
@@ -67,6 +67,7 @@
     <Compile Include="SourcePullers\SubversionPuller.cs" />
     <Compile Include="SourcePullers\BazaarPuller.cs" />
     <Compile Include="AddinProject.cs" />
+    <Compile Include="SandboxService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
