--- a/CydinBuildService/CydinBuildService.csproj
+++ b/CydinBuildService/CydinBuildService.csproj
@@ -38,15 +38,15 @@
     <Reference Include="System.Web" />
     <Reference Include="ICSharpCode.SharpZipLib, Version=2.84.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>libs\ICSharpCode.SharpZipLib.dll</HintPath>
+      <HintPath>..\Cydin\libs\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Addins, Version=0.5.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
+    <Reference Include="Mono.Addins, Version=0.6.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>libs\Mono.Addins.dll</HintPath>
+      <HintPath>..\Cydin\libs\Mono.Addins.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Addins.Setup, Version=0.5.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
+    <Reference Include="Mono.Addins.Setup, Version=0.6.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>libs\Mono.Addins.Setup.dll</HintPath>
+      <HintPath>..\Cydin\libs\Mono.Addins.Setup.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
