Add Mono.Data.Sqlite to references
This allows the solution to build without errors when CYDIN_ON_SQLITE is
defined.

--- a/Cydin/Cydin.csproj
+++ b/Cydin/Cydin.csproj
@@ -64,6 +64,7 @@
     <Reference Include="MySql.Data">
       <HintPath>libs\mysql.data.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Data.Sqlite" />
     <Reference Include="log4net">
       <HintPath>libs\log4net.dll</HintPath>
     </Reference>
