Allow specifying a path to an addin-project.xml file

--- a/CydinBuildService/CydinBuildService.csproj
+++ b/CydinBuildService/CydinBuildService.csproj
@@ -36,16 +36,13 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="ICSharpCode.SharpZipLib, Version=2.84.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\Cydin\libs\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Addins, Version=0.6.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Mono.Addins">
       <HintPath>..\Cydin\libs\Mono.Addins.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Addins.Setup, Version=0.6.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Mono.Addins.Setup">
       <HintPath>..\Cydin\libs\Mono.Addins.Setup.dll</HintPath>
     </Reference>
   </ItemGroup>
