Use a LogService class to write all log

--- a/Cydin/Web.config
+++ b/Cydin/Web.config
@@ -27,7 +27,7 @@
   <appSettings />
 	
   <connectionStrings>
-    <add name="CommunityAddinRepoConnectionString" connectionString="Server=localhost;Database=cydin;Uid=cydinuser;Pwd=cydinpwd;" providerName="System.Data.SqlClient" />
+    <add name="CommunityAddinRepoConnectionString" connectionString="Server=127.0.0.1;Database=cydin;Uid=cydinuser;Pwd=;" providerName="System.Data.SqlClient" />
 	<!-- Uncomment for using SQLite
 		 <add name="CommunityAddinRepoConnectionString" connectionString="Data Source=sqlite.db;Version=3;" providerName="System.Data.SqlClient" />
 	-->
