--- a/CydinBuildService/CydinBuildService.csproj
+++ b/CydinBuildService/CydinBuildService.csproj
@@ -3,13 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4AFC8138-D54D-45B8-8890-CB666BDB7580}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>CydinBuildService</RootNamespace>
     <AssemblyName>CydinBuildService</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,6 +64,7 @@
     <Compile Include="SourcePullers\BazaarPuller.cs" />
     <Compile Include="AddinProject.cs" />
     <Compile Include="SandboxService.cs" />
+    <Compile Include="LogService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
