--- a/Cydin/Web.config
+++ b/Cydin/Web.config
@@ -25,7 +25,7 @@
     </sectionGroup>
   </configSections>
   <appSettings />
-	
+
   <connectionStrings>
     <add name="CommunityAddinRepoConnectionString" connectionString="Server=127.0.0.1;Database=cydin;Uid=cydinuser;Pwd=;" providerName="System.Data.SqlClient" />
 	<!-- Uncomment for using SQLite
@@ -45,7 +45,7 @@
         <add assembly="System.Data.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         <add assembly="System.ComponentModel.DataAnnotations, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-        <add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <!---<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />-->
         <add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add assembly="System.Web.Abstractions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -115,7 +115,7 @@
       <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web.Routing, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </httpModules>
-    <httpRuntime executionTimeout="480" maxRequestLength="40560" />
+    <httpRuntime executionTimeout="480" maxRequestLength="400560" />
   </system.web>
   <system.codedom>
     <compilers>
@@ -162,4 +162,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 </configuration>
